fix navrail being too close to borders

--- a/Helium/gtk-4.0/_tauos.scss
+++ b/Helium/gtk-4.0/_tauos.scss
@@ -713,8 +713,7 @@ $colors: (
 }
 .navigation-rail-button {
   background: none;
-  margin: 0 4px;
-  margin-bottom: 12px;
+  margin: 6px 12px;
   padding: 6px;
   min-height: 57px;
   min-width: 57px;
